--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -1,74 +1,68 @@
-# Updated to remove invalid azure/setup-azure action
-nano .github/workflows/ci-cd.yaml
 name: CI/CD Pipeline
 
 on:
   push:
-    branches:
-      - main
+    branches: [main]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
     env:
-      FRONTEND_IMAGE: amazilo/expensy-frontend
-      BACKEND_IMAGE: amazilo/expensy-backend
+      REGISTRY: docker.io
+      IMAGE_FRONTEND: amazilo/devops.expensy-frontend
+      IMAGE_BACKEND: amazilo/devops.expensy-backend
 
     steps:
+    # Step 1: Checkout the repository
     - name: Checkout code
       uses: actions/checkout@v3
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v3
-      with:
-        node-version: '18'
-
-    - name: Build frontend
-      run: |
-        cd expensy_frontend
-        npm install
-        npm run build
-
-    - name: Build backend
-      run: |
-        cd expensy_backend
-        npm install
-        npm run build
-
+    # Step 2: Set up Docker Buildx
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
 
+    # Step 3: Log in to Docker Hub
     - name: Log in to Docker Hub
       uses: docker/login-action@v2
       with:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Build and push frontend image
-      run: |
-        docker build -t $FRONTEND_IMAGE:latest -f expensy_frontend/Dockerfile.frontend .
-        docker push $FRONTEND_IMAGE:latest
+    # Step 4: Build and push frontend image
+    - name: Build and push frontend
+      uses: docker/build-push-action@v4
+      with:
+        context: ./frontend
+        push: true
+        tags: ${{ env.IMAGE_FRONTEND }}:latest
 
-    - name: Build and push backend image
-      run: |
-        docker build -t $BACKEND_IMAGE:latest -f expensy_backend/Dockerfile.backend .
-        docker push $BACKEND_IMAGE:latest
+    # Step 5: Build and push backend image
+    - name: Build and push backend
+      uses: docker/build-push-action@v4
+      with:
+        context: ./backend
+        push: true
+        tags: ${{ env.IMAGE_BACKEND }}:latest
 
-    - name: Login to Azure
+    # Step 6: Log in to Azure
+    - name: Log in to Azure
       uses: azure/login@v1
       with:
-        client-id: ${{ secrets.AZURE_CLIENT_ID }}
-        tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-        subscription-id: c371d301-3275-437a-b83d-fbd24b765127
+        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Get AKS credentials
+    # Step 7: Install kubectl
+    - name: Install kubectl
       run: |
-        az aks get-credentials \
-          --resource-group ${{ secrets.AZURE_RESOURCE_GROUP }} \
-          --name ${{ secrets.AZURE_AKS_CLUSTER }}
+        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
+        chmod +x kubectl
+        sudo mv kubectl /usr/local/bin/
 
+    # Step 8: Deploy to AKS
     - name: Deploy to AKS
       run: |
-        kubectl apply -f infrastructure/k8s/
+        echo "${{ secrets.KUBECONFIG }}" > kubeconfig.yaml
+        export KUBECONFIG=kubeconfig.yaml
+        kubectl apply -f infrastructure/k8s/frontend-deployment.yaml
+        kubectl apply -f infrastructure/k8s/backend-deployment.yaml
 
