--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -9,18 +9,12 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      REGISTRY: docker.io
       IMAGE_FRONTEND: amazilo/devops-expensy-frontend
       IMAGE_BACKEND: amazilo/devops-expensy-backend
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
-
-    - name: Log in to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v2
@@ -34,32 +28,26 @@ jobs:
     - name: Build and push frontend
       uses: docker/build-push-action@v4
       with:
-        context: ./frontend
+        context: ./devops-expensy/expensy_frontend
         push: true
         tags: ${{ env.IMAGE_FRONTEND }}:latest
 
     - name: Build and push backend
       uses: docker/build-push-action@v4
       with:
-        context: ./backend
+        context: ./devops-expensy/expensy_backend
         push: true
         tags: ${{ env.IMAGE_BACKEND }}:latest
 
-    - name: Install kubectl
-      run: |
-        curl -LO "https://dl.k8s.io/release/$(curl -L -s https://dl.k8s.io/release/stable.txt)/bin/linux/amd64/kubectl"
-        chmod +x kubectl
-        sudo mv kubectl /usr/local/bin/
-
-    - name: Get AKS credentials
-      run: |
-        az aks get-credentials \
-          --resource-group myAKSAmaziloRG \
-          --name myAKSAmaziloCluster \
-          --overwrite-existing
+    - name: Set up kubectl
+      uses: azure/setup-kubectl@v3
+      with:
+        version: 'latest'
 
     - name: Deploy to AKS
       run: |
-        kubectl apply -f infrastructure/k8s/frontend-deployment.yaml
-        kubectl apply -f infrastructure/k8s/backend-deployment.yaml
+        echo "${{ secrets.KUBECONFIG }}" > kubeconfig.yaml
+        export KUBECONFIG=kubeconfig.yaml
+        kubectl apply -f k8s/frontend-deployment.yaml
+        kubectl apply -f k8s/backend-deployment.yaml
 
