--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -29,8 +29,10 @@ jobs:
       uses: docker/build-push-action@v4
       with:
         context: ./devops-expensy/expensy_frontend
+        file: ./devops-expensy/expensy_frontend/Dockerfile.frontend
         push: true
         tags: ${{ env.IMAGE_FRONTEND }}:latest
+
 
     - name: Build and push backend
       uses: docker/build-push-action@v4
