--- a/devops-expensy/backend-deployment.yaml
+++ b/devops-expensy/backend-deployment.yaml
@@ -16,13 +16,15 @@ spec:
       - name: backend
         image: amazilo/expensy-backend:latest
         ports:
-        - containerPort: 5000
+        - containerPort: 8706
         env:
-        - name: DATABASE_URI
+        - name: MONGO_URI
           valueFrom:
             secretKeyRef:
               name: backend-secrets
-              key: DATABASE_URI
+              key: MONGO_URI
+        - name: REDIS_HOST
+          value: "redis"
         - name: REDIS_PASSWORD
           valueFrom:
             secretKeyRef:
