--- a/devops-expensy/backend-service.yaml
+++ b/devops-expensy/backend-service.yaml
@@ -7,6 +7,6 @@ spec:
     app: backend
   ports:
     - protocol: TCP
-      port: 5000
-      targetPort: 5000
+      port: 5000         # Port frontend will use to connect
+      targetPort: 8706   # Actual container port
   type: ClusterIP
