--- a/devops-expensy/frontend-deployment.yaml
+++ b/devops-expensy/frontend-deployment.yaml
@@ -19,4 +19,4 @@ spec:
         - containerPort: 3000
         env:
         - name: NEXT_PUBLIC_API_URL
-          value: http://backend-service:5000
+          value: "http://backend-service:5000"
